2006-09-05  Marius Vollmer  <marius.vollmer@nokia.com>

	* hildon-fm/hildon-file-system-model.c (node_needs_reload): New,
	factored out of hildon_file_system_model_delayed_add_children.
	(hildon_file_system_model_delayed_add_children): Use it.  Call
	handle_possibly_finished_node when the reload request is ignored
	so that the "finished-loading" signal is emitted for every node
	that enters the reload queue. (N31278)
	(_hildon_file_system_model_queue_reload): Use it to reject
	unneeded reloads.

2006-09-04  Marius Vollmer  <marius.vollmer@nokia.com>

	* hildon-fm/hildon-file-system-model.c
	(hildon_file_system_model_finalize): Removed semicolon after 'if'
	condition. (N34414)
	(hildon_file_system_model_autoname_uri): Initialize "folder" to
	NULL. (N34414)

2006-08-31  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* hildon-file-system-model.c (link_file_folder): Added signal
        block/unblock to protect against unwanted "files-added" signal.
	(my_copy_deep): Changed the order in which the folders are linked. 

	* hildon-file-selection.c (on_drag_data_received): Changed to use    
        gtk_tree_view_get_dest_row_at_pos instead of old 
        gtk_tree_view_get_path_at_pos.

        Other changes as well -- check the diff.

2006-02-14  Luc Pionchon  <luc.pionchon@nokia.com>

	Moved hildon-file-details-dialog from hildon-libs to hildon-fm.
        Merged hildon-lgpl into hildon-libs.

	* hildon-fm/hildon-file-details-dialog.[ch]: added from hildon-libs

	* hildon-fm/Makefile.am : added reference to
	hildon-file-details-dialog.[ch]

	* configure.ac (PKG_CHECK_MODULES): removes dependency on
	hildon-lgpl. Depends on hildon-libs 0.12.0


2006-02-13  Murray Cumming  <murrayc@murrayc.com>

	* hildon-fm/hildon-file-system-model.h: 
	Use a prototype declaration for HildonFileSystemModel, 
	as with other structs, so that the C++ bindings can hide the 
	full implementation from their headers.

2006-01-12  Luc Pionchon  <luc.pionchon@nokia.com>
